--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id="toggleModeBtn">Toggle Dark Mode</button>
     <header>
         <div class="container">
-        <h1>Ammaar Saadat </h1>
+        <h1>Ammaar Saadat: Workshop </h1>
         </div>
         <div class="container">
             <nav id="navbar">
@@ -64,7 +64,7 @@
                 <input type="text" id="taskInput" placeholder="Enter ...">
                 <button type="button" onclick="addTask()">Add</button>
             </form>
-            <ul id="taskList">My Tasks</ul>
+            <ul id="taskList"> <div id="taskListTitle">My Tasks:</div></ul>
             <div class="container">
                 <h3 id="tool">Clock</h3>
             </div>
