fixing path ways for css

--- a/index.html
+++ b/index.html
@@ -65,6 +65,35 @@
                 <button type="button" onclick="addTask()">Add</button>
             </form>
             <ul id="taskList"> <div id="taskListTitle">My Tasks:</div></ul>
+
+            <h3> Calculator</h3>
+            <div class="container">
+                
+                <div id="calculator">
+                  <input type="text" id="result" disabled>
+                  <div id="buttons" style="align-content: center;">
+                    <button onclick="appendToDisplay('7')">7</button>
+                    <button onclick="appendToDisplay('8')">8</button>
+                    <button onclick="appendToDisplay('9')">9</button>
+                    <button onclick="appendToDisplay('+')">+</button>
+                    <button onclick="appendToDisplay('4')">4</button>
+                    <button onclick="appendToDisplay('5')">5</button>
+                    <button onclick="appendToDisplay('6')">6</button>
+                    <button onclick="appendToDisplay('-')">-</button>
+                    <button onclick="appendToDisplay('1')">1</button>
+                    <button onclick="appendToDisplay('2')">2</button>
+                    <button onclick="appendToDisplay('3')">3</button>
+                    <button onclick="appendToDisplay('*')">*</button>
+                    <button onclick="appendToDisplay('0')">0</button>
+                    <button onclick="appendToDisplay('.')">.</button>
+                    <button onclick="calculate()">=</button>
+                    <button onclick="clearDisplay()">C</button>
+                    <button onclick="appendToDisplay('/')">/</button>
+                  </div>
+                </div>
+              </div>
+
+
             <div class="container">
                 <h3 id="tool">Clock</h3>
             </div>
