--- a/index.html
+++ b/index.html
@@ -96,10 +96,12 @@
 
         <div id="portfolio">
             <div class="container">
-                <h2>Portfolio</h2>
+                <h2>Schudule</h2>
             </div>
-            <p>I love to create projects.</p>
-            <a href="portfolio.html">projects</a>
+            <p>My upcoming schedules</p>
+            <iframe src="https://calendar.google.com/calendar/embed?src=c_ce49bca9dc776d00a40f08f0c2ae6ca8a645feab0dcd21c576f0cb7b268e8813%40group.calendar.google.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <iframe src="https://calendar.google.com/calendar/embed?src=saadatam%40umich.edu&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+            <a href="portfolio.html">schedule</a>
         </div>
         <div id="hobbies">
             <div class="container">
